kubernetes/coffe/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-coffeetime
spec:
  rules:
  - host: coffeetime
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coffeetime
            port:
              number: 8080
